# nanpure

./: COPYING  Cargo.toml  README.md
src/: app.rs  colors.rs  consts.rs  easy.rs  events.rs  exit.rs  fonts.rs  game.rs  gameover.rs  kennett.rs  lib.rs  load.rs  main.rs  main_menu.rs  pause.rs  settings.rs  signals.rs  state.rs  states.rs  title_scene.rs  ui.rs
src/fonts/: mod.rs  monospace.rs  regular.rs  title.rs
src/game/: anim.rs  board.rs  board_cell.rs  board_wrapper.rs  candidates.rs  cell.rs  colors.rs  cursor.rs  error_cell.rs  inner_board.rs  level.rs  mod.rs  position.rs  shapes.rs  systems.rs  value.rs
src/gameplay/: background.rs  clock.rs  gameplay.rs  gameplay_plugin.rs  keybindings.rs  mod.rs  mouse.rs  paused.rs
src/load/: ctrl.rs  load.rs  load_plugin.rs  mod.rs
src/main_menu/: main_menu.rs
src/scene/: action.rs  gameplay.rs  helpers.rs  mod.rs  pause.rs  start_menu.rs
src/themes/: content.rs  list.rs  mod.rs  theme.rs
src/title/: keybindings.rs  mod.rs  title_scene.rs  title_scene_plugin.rs
src/ui/: fonts.rs  resources.rs  scene.rs
src/ui/scene/: gameplay.rs  help.rs  main_menu.rs  player.rs  scene.rs  state.rs
