[package]
name = "nanpure"
version = "0.3.0"
authors = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://crates.io/crates/nanpure"
repository = "https://github.com/cacilhas/nanpure"
keywords = ["raylib", "sudoku"]
categories = ["Games"]
description = "Yet another sudoku playing game."
edition = "2021"

[profile.dev]
opt-level = 1
panic = "abort"
debug = true

[profile.dev.package."*"]
inherits = "dev"
opt-level = 3

[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"
debug = false
lto = "thin"
rpath = false
strip = true

[dependencies]
walkdir = "2.5"

[dependencies.bevy]
version = "0.16.0-dev"
git = "https://github.com/bevyengine/bevy.git"
#features = ["wav"]

[dependencies.bevy_ecs]
version = "0.16.0-dev"
git = "https://github.com/bevyengine/bevy.git"

[dependencies.log]
version = "*"
features = ["max_level_debug", "release_max_level_warn"]
