[package]
name = "nanpure"
version = "1.0.0"
authors = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://crates.io/crates/nanpure"
repository = "https://codeberg.org/cacilhas/nanpure"
keywords = ["raylib", "sudoku"]
categories = ["games"]
description = "Yet another sudoku playing game."
edition = "2021"

[profile.dev]
opt-level = 1
panic = "abort"
debug = true

[profile.dev.package."*"]
inherits = "dev"

[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"
debug = false
lto = "thin"
rpath = false
strip = true

[profile.release.package."*"]
inherits = "release"

[dependencies]
bevy_ecs = "0.16"
bevy_state = "0.16"
walkdir = "2.5"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "std",
    "async_executor",
    # "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    # "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    # "bevy_log",
    # "bevy_mesh_picking_backend",
    # "bevy_pbr",
    # "bevy_picking",
    "bevy_render",
    # "bevy_scene",
    # "bevy_sprite",
    # "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    # "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    # "custom_cursor",
    # "default_font",
    "hdr",
    "multi_threaded",
    # "png",
    # "smaa_luts",
    # "sysinfo_plugin",
    # "tonemapping_luts",
    # "vorbis",
    # "webgl2",
    "x11",
]

[dependencies.bevy_rand]
version = "0.10"
features = ["wyrand"]

[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_warn"]
