[package]
name = "numples"
version = "1.0.0"
authors = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://crates.io/crates/numples"
repository = "https://codeberg.org/cacilhas/numples"
keywords = ["raylib", "sudoku"]
categories = ["games"]
description = "Yet another sudoku playing game."
edition = "2021"

[profile.dev]
opt-level = 1
panic = "abort"
debug = true

[profile.dev.package."*"]
inherits = "dev"

[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"
debug = false
lto = "thin"
rpath = false
strip = true

[profile.release.package."*"]
inherits = "release"

[dependencies]
bevy_ecs = "0.16"
bevy_state = "0.16"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "std",
    "async_executor",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "hdr",
    "multi_threaded",
    "x11",
]
